--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,17 @@ node_modules/
 
 # Environment variables
 .env
+.env.test
 
 # Logs
-logs/
-*.log
+error.log
+combined.log
 
 # OS files
 .DS_Store
 
 # Coverage (Jest)
 coverage/
+
+# Optional
+*.log
